started styling, need to fix some issues, styles overlaps with other components

--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,8 @@
-
+.container{ 
+  
+  width: 100%; 
+  height: 100%; 
+  
+  /* border: 2px solid black; */
+  /* background-color: red; */
+}
